--- a/APP/app/src/main/res/layout/fragment_ranking.xml
+++ b/APP/app/src/main/res/layout/fragment_ranking.xml
@@ -10,19 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rVListaConInfoDeVideojuego"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="arriba"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <ProgressBar
+            android:id="@+id/pBIndeterminada"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="abajo"
+            android:minHeight="24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            android:indeterminate="true"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
