--- a/APP/app/src/main/res/layout/item_info_videojuego.xml
+++ b/APP/app/src/main/res/layout/item_info_videojuego.xml
@@ -9,7 +9,7 @@
         android:id="@+id/iVImagenVideojuego"
         android:layout_width="200dp"
         android:layout_height="125dp"
-        android:layout_marginLeft="14dp"
+        android:layout_marginLeft="3dp"
         android:scaleType="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,13 +32,13 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="8.71" />
 
-        <!--<ImageView
+        <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginLeft="5dp"
             android:src="@drawable/ic_white_star"
             app:layout_constraintLeft_toRightOf="@id/tVNotaMediaVideojuego"
-            app:layout_constraintTop_toTopOf="parent" />-->
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tVNotaPersonalVideojuego"
@@ -50,14 +50,14 @@
             app:layout_constraintTop_toBottomOf="@id/tVNotaMediaVideojuego"
             tools:text="6" />
 
-        <!--        <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_nota_personal"
-                    app:layout_constraintLeft_toRightOf="@id/tVNotaPersonalVideojuego"
-                    app:layout_constraintTop_toBottomOf="@id/tVNotaMediaVideojuego"
-                    app:tint="@color/white"
-                    android:layout_marginLeft="5dp"/>-->
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_nota_personal"
+            app:layout_constraintLeft_toRightOf="@id/tVNotaPersonalVideojuego"
+            app:layout_constraintTop_toBottomOf="@id/tVNotaMediaVideojuego"
+            app:tint="@color/white" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -82,5 +82,18 @@
         app:layout_constraintLeft_toLeftOf="@id/tVNombreVideojuego"
         app:layout_constraintTop_toBottomOf="@id/tVNombreVideojuego"
         tools:text="MMORPG" />
+
+    <ImageView
+        android:id="@+id/iVAnyadirOEditar"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/lightBlack"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="@id/iVImagenVideojuego"
+        app:layout_constraintRight_toRightOf="@id/iVImagenVideojuego"
+        app:tint="@color/white"
+        tools:src="@drawable/ic_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
