--- a/APP/app/src/main/res/layout/fragment_main_content.xml
+++ b/APP/app/src/main/res/layout/fragment_main_content.xml
@@ -37,7 +37,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="80dp"
+            app:layout_constraintBottom_toTopOf="@id/layoutBottomNavigationMenu"
+            android:layout_marginTop="65dp"
             />
 
 
