--- a/APP/app/src/main/res/layout/fragment_comunidad.xml
+++ b/APP/app/src/main/res/layout/fragment_comunidad.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.fragments.ComunidadFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <SearchView
+        android:id="@+id/sVComunidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="15dp" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rVComunidad"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/sVComunidad"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="15dp" />
+
+    <ProgressBar
+        android:id="@+id/pBIndeterminada"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintLeft_toLeftOf="@id/rVComunidad"
+        app:layout_constraintTop_toTopOf="@id/rVComunidad"
+        app:layout_constraintRight_toRightOf="@id/rVComunidad"
+        app:layout_constraintBottom_toBottomOf="@id/rVComunidad" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
