--- a/APP/app/src/main/res/values/colors.xml
+++ b/APP/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightBlack">#473633</color>
+    <color name="lightGreen">#98993F</color>
 </resources>
