--- a/APP/app/src/main/res/layout/item_info_videojuego.xml
+++ b/APP/app/src/main/res/layout/item_info_videojuego.xml
@@ -66,7 +66,7 @@
         android:id="@+id/tVNombreVideojuego"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:textSize="17sp"
         app:layout_constraintLeft_toLeftOf="@id/iVImagenVideojuego"
         app:layout_constraintTop_toBottomOf="@id/iVImagenVideojuego"
