--- a/APP/app/src/main/res/layout/item_mi_lista_videojuego.xml
+++ b/APP/app/src/main/res/layout/item_mi_lista_videojuego.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textColor="?android:attr/textColorPrimary"
         tools:text = "The Witcher 3"
         app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
         app:layout_constraintTop_toTopOf="@id/iVImagenVideojuego"
@@ -67,7 +68,8 @@
         app:layout_constraintLeft_toRightOf="@id/tVNotaPersonalVideojuegoValue"
         android:layout_marginLeft="5dp"
         android:src="@drawable/ic_nota_personal"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:tint="?android:attr/textColorPrimary"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -77,7 +79,8 @@
         app:layout_constraintLeft_toRightOf="@id/tVDificultadPersonalVideojuegoValue"
         android:layout_marginLeft="5dp"
         android:src="@drawable/ic_dificultad"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:tint="?android:attr/textColorPrimary"/>
 
     <TextView
         android:id="@+id/tVNombreEstado"
