--- a/APP/app/src/main/res/menu/navigation_drawer.xml
+++ b/APP/app/src/main/res/menu/navigation_drawer.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group
         android:id="@+id/group1"
-        android:checkableBehavior="single">
+        android:checkableBehavior="none">
         <item
             android:id="@+id/item_Ajustes"
             android:icon="@drawable/ic_engranaje"
