--- a/APP/app/src/main/res/layout/fragment_login.xml
+++ b/APP/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:textSize="28sp"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimary"
             android:text="Iniciar Sesión"/>
 
         <com.google.android.material.textfield.TextInputLayout
