--- a/APP/app/src/main/res/layout/fragment_modificar_credenciales.xml
+++ b/APP/app/src/main/res/layout/fragment_modificar_credenciales.xml
@@ -1,14 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.ModificarCredencialesFragment">
+    tools:context=".views.fragments.ModificarCredencialesFragment"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:textSize="28sp"
+        android:textAlignment="center"
+        android:textColor="?android:attr/textColorPrimary"
+        android:text="¿Qué desea cambiar?"/>
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="25dp"
+        android:background="#c0c0c0" />
+
+    <TextView
+        android:id="@+id/tVCambiarNombreUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:layout_marginTop="5dp"
+        android:textColor="?android:attr/textColorPrimary"
+        android:text="Nombre de usuario"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="12dp"
+        android:background="#c0c0c0" />
+
+    <TextView
+        android:id="@+id/tVCambiarEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:layout_marginTop="5dp"
+        android:textColor="?android:attr/textColorPrimary"
+        android:text="Correo electrónico"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="12dp"
+        android:background="#c0c0c0" />
+
+    <TextView
+        android:id="@+id/tVCambiarPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:layout_marginTop="5dp"
+        android:textColor="?android:attr/textColorPrimary"
+        android:text="Contraseña"/>
+
+</LinearLayout>
