--- a/APP/app/src/main/res/layout/fragment_detalles.xml
+++ b/APP/app/src/main/res/layout/fragment_detalles.xml
@@ -29,157 +29,201 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tVNombreVideojuegoTitle"
+            android:textColor="?android:attr/textColorPrimary"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@id/iVImagenVideojuego"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            android:text="Nombre del videojuego"
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tVNombreVideojuegoTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nombre del videojuego"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tVNombreVideojuegoValue"
+            android:layout_width="0dp"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tVNombreVideojuegoTitle"
+            app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textAlignment="center"
+            tools:text="The Witcher 3" />
 
-            <TextView
-                android:id="@+id/tVNombreVideojuegoValue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                tools:text="The Witcher 3" />
+        <!-- esto es para separar, similar a un <hr /> en html -->
+        <View
+            android:id="@+id/vwSeparador"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"
+            app:layout_constraintTop_toBottomOf="@id/tVNombreVideojuegoValue"
+            app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
+            app:layout_constraintRight_toRightOf="parent" />
 
-            <!-- esto es para separar, similar a un <hr /> en html -->
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#c0c0c0" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tVNotaMediaVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/vwSeparador"
+            android:layout_marginTop="5dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:text="Nota media"
+            android:textStyle="bold"
+            android:textAlignment="viewEnd" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nota media"
-                    android:textStyle="bold"
-                    android:textAlignment="viewStart" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Dificultad media"
-                    android:textAlignment="viewEnd"
-                    android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tVNotaMediaVideojuegoValue"
+            tools:text="8.4"
+            app:layout_constraintTop_toBottomOf="@id/tVNotaMediaVideojuegoTitle"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:drawableTint="?android:attr/textColorPrimary" />
 
-            </LinearLayout>
+        <ImageView
+            app:layout_constraintRight_toLeftOf="@id/tVNotaMediaVideojuegoValue"
+            app:layout_constraintTop_toTopOf="@id/tVNotaMediaVideojuegoValue"
+            app:layout_constraintBottom_toBottomOf="@id/tVNotaMediaVideojuegoValue"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_white_star"
+            app:tint="?android:attr/textColorPrimary" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tVDificultadMediaVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/tVNotaMediaVideojuegoValue"
+            android:layout_marginTop="5dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            android:text="Dificultad media"
+            android:textAlignment="viewEnd"
+            android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tVNotaMediaVideojuegoValue"
-                    tools:text="8.4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tVDificultadMediaVideojuegoValue"
+            tools:text="7.4"
+            app:layout_constraintTop_toBottomOf="@id/tVDificultadMediaVideojuegoTitle"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_white_star"
-                    app:tint="@color/black" />
-
-                <TextView
-                    android:id="@+id/tVDificultadMediaVideojuegoValue"
-                    tools:text="7.4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="viewEnd"
-                    android:layout_marginLeft="15dp"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_dificultad"
-                    android:textAlignment="viewEnd"/>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="12dp"
-                android:background="#c0c0c0" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nota personal"
-                    android:textStyle="bold"
-                    android:textAlignment="viewStart" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Dif. personal"
-                    android:textAlignment="viewEnd"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tVNotaPersonalVideojuegoValue"
-                    tools:text="6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_nota_personal"
-                    app:tint="@color/black" />
-
-                <TextView
-                    android:id="@+id/tVDificultadPersonalVideojuegoValue"
-                    tools:text="5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="viewEnd"
-                    android:layout_marginLeft="15dp"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_dificultad"
-                    android:textAlignment="viewEnd"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        <ImageView
+            app:layout_constraintRight_toLeftOf="@id/tVDificultadMediaVideojuegoValue"
+            app:layout_constraintTop_toTopOf="@id/tVDificultadMediaVideojuegoValue"
+            app:layout_constraintBottom_toBottomOf="@id/tVDificultadMediaVideojuegoValue"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_dificultad"
+            app:tint="?android:attr/textColorPrimary"/>
 
         <View
+            android:id="@+id/vwSeparador2"
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginTop="12dp"
-            android:background="#c0c0c0"
-            app:layout_constraintBottom_toBottomOf="@id/iVImagenVideojuego"
+            app:layout_constraintTop_toBottomOf="@id/tVDificultadMediaVideojuegoValue"
             app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="#c0c0c0" />
+
+        <TextView
+            android:id="@+id/tVNotaPersonalVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/vwSeparador2"
+            android:layout_marginTop="5dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:text="Nota personal"
+            android:textStyle="bold"
+            android:textAlignment="viewEnd" />
+
+        <TextView
+            android:id="@+id/tVNotaPersonalVideojuegoValue"
+            tools:text="8.4"
+            app:layout_constraintTop_toBottomOf="@id/tVNotaPersonalVideojuegoTitle"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:drawableTint="?android:attr/textColorPrimary" />
+
+        <ImageView
+            app:layout_constraintRight_toLeftOf="@id/tVNotaPersonalVideojuegoValue"
+            app:layout_constraintTop_toTopOf="@id/tVNotaPersonalVideojuegoValue"
+            app:layout_constraintBottom_toBottomOf="@id/tVNotaPersonalVideojuegoValue"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_nota_personal"
+            app:tint="?android:attr/textColorPrimary"/>
+
+        <TextView
+            android:id="@+id/tVDificultadPersonalVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/tVNotaPersonalVideojuegoValue"
+            android:layout_marginTop="5dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            android:text="Dificultad media"
+            android:textAlignment="viewEnd"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tVDificultadPersonalVideojuegoValue"
+            tools:text="7.4"
+            app:layout_constraintTop_toBottomOf="@id/tVDificultadPersonalVideojuegoTitle"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"/>
+
+        <ImageView
+            app:layout_constraintRight_toLeftOf="@id/tVDificultadPersonalVideojuegoValue"
+            app:layout_constraintTop_toTopOf="@id/tVDificultadPersonalVideojuegoValue"
+            app:layout_constraintBottom_toBottomOf="@id/tVDificultadPersonalVideojuegoValue"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_dificultad"
+            app:tint="?android:attr/textColorPrimary"/>
+
+        <View
+            android:id="@+id/vwSeparador3"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="12dp"
+            android:background="#c0c0c0"
+            app:layout_constraintTop_toBottomOf="@id/tVDificultadPersonalVideojuegoValue" />
+
+        <TextView
+            android:id="@+id/tVGenerosVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/vwSeparador3"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            android:text="Generos"
+            android:textAlignment="viewEnd"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tVGenerosVideojuegoValue"
+            tools:text="MMORPG"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/tVGenerosVideojuegoTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAnyadirOEditar"
