--- a/APP/app/src/main/res/layout/fragment_perfil.xml
+++ b/APP/app/src/main/res/layout/fragment_perfil.xml
@@ -38,9 +38,11 @@
         tools:text="juanito" />
 
     <Button
+        android:id="@+id/btnEditarPerfil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
+        android:visibility="gone"
         android:backgroundTint="@color/lightBlack"
         android:text="Editar Perfil"
         android:textColor="@color/white"
