APP terminada, falta refactorizar y diseño

--- a/APP/app/src/main/res/layout/fragment_ajustes.xml
+++ b/APP/app/src/main/res/layout/fragment_ajustes.xml
@@ -56,6 +56,6 @@
         app:drawableTint="?android:attr/textColorPrimary"
         android:textColor="?android:attr/textColorPrimary"
         android:gravity="center_vertical"
-        android:text="Modificar credenciales" />
+        android:text="Modificar cuenta" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
