--- a/APP/app/src/main/res/layout/fragment_modificar_credenciales.xml
+++ b/APP/app/src/main/res/layout/fragment_modificar_credenciales.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.fragments.ModificarCredencialesFragment"
     android:orientation="vertical">
 
@@ -61,5 +62,23 @@
         android:layout_marginTop="5dp"
         android:textColor="?android:attr/textColorPrimary"
         android:text="Contraseña"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tVBorrarCuenta"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24dp"
+            android:drawableLeft="@drawable/ic_papelera"
+            app:drawableTint="@color/red"
+            android:textColor="@color/red"
+            android:gravity="center_vertical"
+            android:text="Eliminar cuenta" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
