--- a/APP/app/src/main/res/layout/fragment_main_content.xml
+++ b/APP/app/src/main/res/layout/fragment_main_content.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.fragments.MainContentFragment"
     android:id="@+id/drawerLayout"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -30,7 +31,6 @@
             android:id="@+id/MaincontentFragment_nav"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.8"
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:navGraph="@navigation/main_content_nav_graph"
             app:defaultNavHost="true"
