--- a/APP/app/src/main/res/layout/fragment_mi_lista.xml
+++ b/APP/app/src/main/res/layout/fragment_mi_lista.xml
@@ -62,13 +62,36 @@
 
     </com.google.android.material.tabs.TabLayout>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnOrdenar"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:background="@android:color/transparent"
+        app:iconTint="?android:attr/textColorPrimary"
+        app:icon="@drawable/ic_ordenar"
+        app:iconSize="32dp"
+        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+        app:layout_constraintRight_toRightOf="parent"
+        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />
+
+    <SearchView
+        android:id="@+id/sVMiLista"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:focusableInTouchMode="false"
+        android:iconifiedByDefault="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnOrdenar"
+        app:layout_constraintTop_toTopOf="@id/btnOrdenar" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rVSoloVideojuegosEnLista"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/sVMiLista"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10dp" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
