--- a/APP/app/src/main/res/layout/fragment_ranking.xml
+++ b/APP/app/src/main/res/layout/fragment_ranking.xml
@@ -4,25 +4,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".views.fragments.RankingFragment">
+    tools:context=".views.fragments.RankingFragment"
+    android:focusableInTouchMode="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnOrdenar"
+            style="@style/Widget.MaterialComponents.Button.Icon"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:background="@android:color/transparent"
+            app:iconTint="?android:attr/textColorPrimary"
+            app:icon="@drawable/ic_ordenar"
+            app:iconSize="32dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />
+
+        <SearchView
+            android:id="@+id/sVRanking"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:focusableInTouchMode="false"
+            android:iconifiedByDefault="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/btnOrdenar"
+            app:layout_constraintTop_toTopOf="@id/btnOrdenar" />
+
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/swipeRefresh"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/sVRanking"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="5dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rVListaConInfoDeVideojuego"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                android:layout_height="wrap_content"/>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
