seguir mejorando el diseño

--- a/APP/app/src/main/res/layout/fragment_login.xml
+++ b/APP/app/src/main/res/layout/fragment_login.xml
@@ -67,6 +67,13 @@
             android:layout_height="56dp"
             android:text="Crear una cuenta"
             style="@style/Widget.MaterialComponents.Button"/>
+
+        <Button
+            android:id="@+id/loginAnonymous"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:text="Anonimo"
+            style="@style/Widget.MaterialComponents.Button"/>
     </LinearLayout>
 
 </FrameLayout>
