--- a/APP/app/src/main/res/values/colors.xml
+++ b/APP/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="lightBlack">#473633</color>
     <color name="lightGreen">#98993F</color>
     <color name="red">#FF0000</color>
+    <color name="blue">#0000FF</color>
 </resources>
