--- a/APP/app/src/main/res/layout/fragment_anyadir_o_editar.xml
+++ b/APP/app/src/main/res/layout/fragment_anyadir_o_editar.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".views.fragments.AnyadirOEditarFragment">
+    tools:context=".views.fragments.AnyadirOEditarFragment"
+    android:padding="15dp">
 
     <com.google.android.material.textfield.TextInputLayout
         app:layout_constraintTop_toTopOf="parent"
@@ -51,9 +52,11 @@
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="15dp"
         android:ellipsize="middle"
-        android:marqueeRepeatLimit="-1" />
+        android:marqueeRepeatLimit="-1"
+        android:layout_marginTop="25dp"/>
 
     <View
+        android:id="@+id/rectPickerNota"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle"
@@ -64,7 +67,7 @@
 
     <TextView
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/hPickerNota"
+        app:layout_constraintTop_toBottomOf="@id/rectPickerNota"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/tVDificultad"
         android:layout_width="wrap_content"
@@ -80,9 +83,11 @@
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="15dp"
         android:ellipsize="middle"
-        android:marqueeRepeatLimit="-1" />
+        android:marqueeRepeatLimit="-1"
+        android:layout_marginTop="25dp"/>
 
     <View
+        android:id="@+id/rectPickerDificultad"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle"
@@ -91,20 +96,117 @@
         app:layout_constraintTop_toTopOf="@id/hPickerDificultad"
         app:layout_constraintBottom_toBottomOf="@id/hPickerDificultad"/>
 
-    <Button
+    <TextView
         android:id="@+id/btnAnyadirOEditar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:text="Guardar"
+        android:textSize="18sp"
+        android:textColor="@color/blue"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageView
+        android:id="@+id/iVBorrar"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/btnBorrar"
+        app:layout_constraintBottom_toBottomOf="@id/btnBorrar"
+        app:layout_constraintRight_toLeftOf="@id/btnBorrar"
+        android:src="@drawable/ic_papelera" />
+
+    <View
+        android:id="@+id/vwSeparador"
+        android:layout_width="2dp"
+        android:layout_height="0dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintBottom_toBottomOf="@id/btnAnyadirOEditar"
+        app:layout_constraintTop_toTopOf="@id/btnAnyadirOEditar"
+        app:layout_constraintRight_toLeftOf="@id/btnAnyadirOEditar"
+        android:background="#c0c0c0" />
+
+    <TextView
         android:id="@+id/btnBorrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Borrar"
+        android:textSize="18sp"
+        android:layout_marginRight="5dp"
+        android:textColor="@color/red"
+        app:layout_constraintRight_toLeftOf="@id/vwSeparador"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/rectPickerDificultad"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/tVFechaTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha" />
+
+    <TextView
+        android:id="@+id/btnFechaComienzoHoy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/purple_700"
+        android:text="Hoy"
+        android:textSize="18sp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/tVFechaTitle"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="BORRAR"
-        android:textColor="@color/lightBlack" />
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/btnFechaFinalizacionHoy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/purple_700"
+        android:text="Hoy"
+        android:textSize="18sp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@id/btnFechaComienzoHoy"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <EditText
+        android:id="@+id/eTFechaComienzo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        app:layout_constraintTop_toTopOf="@id/btnFechaComienzoHoy"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnFechaComienzoHoy"
+        app:layout_constraintBottom_toBottomOf="@id/btnFechaComienzoHoy"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:paddingLeft="25dp"
+        android:focusableInTouchMode="false"
+        android:hint="Fecha de comienzo"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <EditText
+        android:id="@+id/eTFechaFinalizacion"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        app:layout_constraintTop_toTopOf="@id/btnFechaFinalizacionHoy"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnFechaFinalizacionHoy"
+        app:layout_constraintBottom_toBottomOf="@id/btnFechaFinalizacionHoy"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:paddingLeft="25dp"
+        android:focusableInTouchMode="false"
+        android:hint="Fecha de finalizacion"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
