--- a/APP/app/src/main/res/layout/fragment_detalles.xml
+++ b/APP/app/src/main/res/layout/fragment_detalles.xml
@@ -225,6 +225,98 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"/>
 
+        <TextView
+            android:id="@+id/tVPlataformasVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/tVGenerosVideojuegoValue"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            android:text="Plataformas"
+            android:textAlignment="viewEnd"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tVPlataformasVideojuegoValue"
+            tools:text="PC, PS3"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/tVPlataformasVideojuegoTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"/>
+
+        <TextView
+            android:id="@+id/tVDesarrolladorVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/tVPlataformasVideojuegoValue"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            android:text="Desarrollador(es)"
+            android:textAlignment="viewEnd"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tVDesarrolladorVideojuegoValue"
+            tools:text="Indie Company 123"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/tVDesarrolladorVideojuegoTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"/>
+
+        <TextView
+            android:id="@+id/tVDistribuidorVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/tVDesarrolladorVideojuegoValue"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            android:text="Distribuidor(es)"
+            android:textAlignment="viewEnd"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tVDistribuidorVideojuegoValue"
+            tools:text="Indie Distributor 321"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/tVDistribuidorVideojuegoTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"/>
+
+        <TextView
+            android:id="@+id/tVFechaLanzamientoVideojuegoTitle"
+            app:layout_constraintTop_toBottomOf="@id/tVDistribuidorVideojuegoValue"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_height="wrap_content"
+            android:text="Fecha de Lanzamiento"
+            android:textAlignment="viewEnd"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tVFechaLanzamientoVideojuegoValue"
+            tools:text="17/02/2001"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/tVFechaLanzamientoVideojuegoTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"/>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAnyadirOEditar"
             style="@style/Widget.MaterialComponents.Button.Icon"
