--- a/APP/app/src/main/res/layout/item_info_videojuego.xml
+++ b/APP/app/src/main/res/layout/item_info_videojuego.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="10dp">
 
     <ImageView
         android:id="@+id/iVImagenVideojuego"
-        android:layout_width="200dp"
+        android:layout_width="175dp"
         android:layout_height="125dp"
-        android:layout_marginLeft="3dp"
         android:scaleType="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:background="@color/lightBlack"
+        android:paddingLeft="5dp"
         app:layout_constraintBottom_toBottomOf="@id/iVImagenVideojuego"
         app:layout_constraintLeft_toLeftOf="@id/iVImagenVideojuego">
 
@@ -87,7 +88,7 @@
         android:id="@+id/iVAnyadirOEditar"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/lightBlack"
         android:padding="5dp"
