--- a/APP/app/src/main/res/layout/item_mi_lista_videojuego.xml
+++ b/APP/app/src/main/res/layout/item_mi_lista_videojuego.xml
@@ -15,14 +15,17 @@
 
     <TextView
         android:id="@+id/tVNombreVideojuego"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textColor="?android:attr/textColorPrimary"
         tools:text = "The Witcher 3"
         app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/iVImagenVideojuego"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp"
+        android:ellipsize="end"
+        android:maxLines="1" />
 
 
     <TextView
@@ -59,6 +62,40 @@
         app:layout_constraintTop_toTopOf="@id/tVDificultadPersonalVideojuegoTitle"
         tools:text="9"
         android:layout_marginLeft="5dp"/>
+
+    <TextView
+        android:id="@+id/tVFechaComienzoTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
+        app:layout_constraintTop_toBottomOf="@id/tVDificultadPersonalVideojuegoTitle"
+        android:text="Fecha Comienzo:"
+        android:layout_marginLeft="5dp"/>
+
+    <TextView
+        android:id="@+id/tVFechaComienzoValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/tVFechaComienzoTitle"
+        app:layout_constraintTop_toBottomOf="@id/tVFechaComienzoTitle"
+        tools:text="17-03-2022" />
+
+    <TextView
+        android:id="@+id/tVFechaFinalizacionTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
+        app:layout_constraintTop_toBottomOf="@id/tVFechaComienzoValue"
+        android:text="Fecha Finalizacion:"
+        android:layout_marginLeft="5dp"/>
+
+    <TextView
+        android:id="@+id/tVFechaFinalizacionValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/tVFechaFinalizacionTitle"
+        app:layout_constraintTop_toBottomOf="@id/tVFechaFinalizacionTitle"
+        tools:text="17-03-2022" />
 
     <ImageView
         android:layout_width="wrap_content"
