--- a/APP/app/src/main/res/layout/item_comunidad.xml
+++ b/APP/app/src/main/res/layout/item_comunidad.xml
@@ -11,7 +11,7 @@
         android:layout_height="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/ic_profile"/>
+        android:src="@drawable/ic_people"/>
 
     <TextView
         android:id="@+id/tVNombreUsuario"
