--- a/APP/app/src/main/res/layout/fragment_comunidad.xml
+++ b/APP/app/src/main/res/layout/fragment_comunidad.xml
@@ -28,8 +28,7 @@
         android:id="@+id/pBIndeterminada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="@id/rVComunidad"
         app:layout_constraintTop_toTopOf="@id/rVComunidad"
         app:layout_constraintRight_toRightOf="@id/rVComunidad"
