--- a/APP/app/src/main/res/layout/fragment_detalles.xml
+++ b/APP/app/src/main/res/layout/fragment_detalles.xml
@@ -244,7 +244,9 @@
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/tVPlataformasVideojuegoTitle"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="0dp"
+            android:maxLines="3"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"/>
 
