--- a/APP/app/src/main/res/layout/fragment_sign_up.xml
+++ b/APP/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,108 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.fragments.SignUpFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/tVRegistrarseTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Registrarse"
             android:textAlignment="center"
-            android:textSize="28sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="28sp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/signUpEmail"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="E-mail"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:endIconMode="clear_text">
+            app:endIconMode="clear_text"
+            app:layout_constraintTop_toBottomOf="@id/tVRegistrarseTitle"
+            android:layout_marginHorizontal="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                app:errorEnabled = "true"
-                />
+                app:errorEnabled="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/signUpUsername"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:endIconMode="clear_text">
+            app:endIconMode="clear_text"
+            app:layout_constraintTop_toBottomOf="@id/signUpEmail"
+            android:layout_marginHorizontal="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                app:errorEnabled = "true"
-                />
+                app:errorEnabled="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/signUpPassword"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:endIconMode="password_toggle">
+            app:endIconMode="password_toggle"
+            app:layout_constraintTop_toBottomOf="@id/signUpUsername"
+            android:layout_marginHorizontal="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="textPassword"
-                app:errorEnabled = "true"
-                />
+                app:errorEnabled="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/signUpRepeatPassword"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Repeat Password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:endIconMode="password_toggle">
+            app:endIconMode="password_toggle"
+            app:layout_constraintTop_toBottomOf="@id/signUpPassword"
+            android:layout_marginHorizontal="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="textPassword"
-                app:errorEnabled = "true"
-                />
+                app:errorEnabled="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/signUpButton"
-            android:layout_width="match_parent"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="0dp"
             android:layout_height="56dp"
             android:text="Registrarse"
-            style="@style/Widget.MaterialComponents.Button"/>
+            app:layout_constraintLeft_toLeftOf="@id/signUpEmail"
+            app:layout_constraintRight_toRightOf="@id/signUpEmail"
+            app:layout_constraintTop_toBottomOf="@id/signUpRepeatPassword"
+            app:layout_constraintWidth_percent="0.9" />
 
         <Button
             android:id="@+id/signUpGoLoginButton"
-            android:layout_width="match_parent"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="0dp"
             android:layout_height="56dp"
             android:text="ya tengo cuenta"
-            style="@style/Widget.MaterialComponents.Button"/>
+            app:layout_constraintLeft_toLeftOf="@id/signUpEmail"
+            app:layout_constraintRight_toRightOf="@id/signUpEmail"
+            app:layout_constraintTop_toBottomOf="@id/signUpButton"
+            app:layout_constraintWidth_percent="0.9" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
