--- a/APP/app/src/main/res/layout/item_mi_lista_videojuego.xml
+++ b/APP/app/src/main/res/layout/item_mi_lista_videojuego.xml
@@ -69,15 +69,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
         app:layout_constraintTop_toBottomOf="@id/tVDificultadPersonalVideojuegoTitle"
-        android:text="Fecha Comienzo:"
+        android:text="Comienzo:"
         android:layout_marginLeft="5dp"/>
 
     <TextView
         android:id="@+id/tVFechaComienzoValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/tVFechaComienzoTitle"
-        app:layout_constraintTop_toBottomOf="@id/tVFechaComienzoTitle"
+        app:layout_constraintLeft_toRightOf="@id/tVFechaComienzoTitle"
+        app:layout_constraintTop_toTopOf="@id/tVFechaComienzoTitle"
+        android:layout_marginLeft="5dp"
         tools:text="17-03-2022" />
 
     <TextView
@@ -86,38 +87,17 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/iVImagenVideojuego"
         app:layout_constraintTop_toBottomOf="@id/tVFechaComienzoValue"
-        android:text="Fecha Finalizacion:"
+        android:text="Finalizacion:"
         android:layout_marginLeft="5dp"/>
 
     <TextView
         android:id="@+id/tVFechaFinalizacionValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/tVFechaFinalizacionTitle"
-        app:layout_constraintTop_toBottomOf="@id/tVFechaFinalizacionTitle"
+        app:layout_constraintLeft_toRightOf="@id/tVFechaFinalizacionTitle"
+        app:layout_constraintTop_toTopOf="@id/tVFechaFinalizacionTitle"
+        android:layout_marginLeft="5dp"
         tools:text="17-03-2022" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/tVNotaPersonalVideojuegoValue"
-        app:layout_constraintBottom_toBottomOf="@id/tVNotaPersonalVideojuegoValue"
-        app:layout_constraintLeft_toRightOf="@id/tVNotaPersonalVideojuegoValue"
-        android:layout_marginLeft="5dp"
-        android:src="@drawable/ic_nota_personal"
-        app:layout_constraintRight_toRightOf="parent"
-        app:tint="?android:attr/textColorPrimary"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/tVDificultadPersonalVideojuegoValue"
-        app:layout_constraintBottom_toBottomOf="@id/tVDificultadPersonalVideojuegoValue"
-        app:layout_constraintLeft_toRightOf="@id/tVDificultadPersonalVideojuegoValue"
-        android:layout_marginLeft="5dp"
-        android:src="@drawable/ic_dificultad"
-        app:layout_constraintRight_toRightOf="parent"
-        app:tint="?android:attr/textColorPrimary"/>
 
     <TextView
         android:id="@+id/tVNombreEstado"
@@ -134,12 +114,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/lightBlack"
-        app:layout_constraintWidth_percent="0.12"
-        app:layout_constraintHeight_percent="0.30"
+        app:layout_constraintWidth_percent="0.09"
+        app:layout_constraintHeight_percent="0.22"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/iVImagenVideojuego"
         android:layout_marginRight="10dp"
-        android:paddingHorizontal="5dp"
+        android:paddingHorizontal="1dp"
+        android:paddingVertical="2dp"
         app:tint="@color/white"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
