--- a/APP/app/src/main/res/layout/fragment_detalles.xml
+++ b/APP/app/src/main/res/layout/fragment_detalles.xml
@@ -66,6 +66,7 @@
             android:id="@+id/tVNotaMediaVideojuegoTitle"
             app:layout_constraintTop_toBottomOf="@id/vwSeparador"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,6 +81,7 @@
             app:layout_constraintTop_toBottomOf="@id/tVNotaMediaVideojuegoTitle"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:drawableTint="?android:attr/textColorPrimary" />
@@ -97,6 +99,7 @@
             android:id="@+id/tVDificultadMediaVideojuegoTitle"
             app:layout_constraintTop_toBottomOf="@id/tVNotaMediaVideojuegoValue"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:textColor="?android:attr/textColorPrimary"
@@ -108,6 +111,8 @@
         <TextView
             android:id="@+id/tVDificultadMediaVideojuegoValue"
             tools:text="7.4"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/tVDificultadMediaVideojuegoTitle"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
@@ -137,6 +142,7 @@
             android:id="@+id/tVNotaPersonalVideojuegoTitle"
             app:layout_constraintTop_toBottomOf="@id/vwSeparador2"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -148,6 +154,7 @@
         <TextView
             android:id="@+id/tVNotaPersonalVideojuegoValue"
             tools:text="8.4"
+            android:layout_marginRight="15dp"
             app:layout_constraintTop_toBottomOf="@id/tVNotaPersonalVideojuegoTitle"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="5dp"
@@ -168,6 +175,7 @@
             android:id="@+id/tVDificultadPersonalVideojuegoTitle"
             app:layout_constraintTop_toBottomOf="@id/tVNotaPersonalVideojuegoValue"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:textColor="?android:attr/textColorPrimary"
@@ -179,6 +187,8 @@
         <TextView
             android:id="@+id/tVDificultadPersonalVideojuegoValue"
             tools:text="7.4"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/tVDificultadPersonalVideojuegoTitle"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
